# ApraPipes

./: CCDMAHost.cpp  CCDMAHost.h  CCSaver.cpp  CCSaver.h  CMHost.cpp  CMHost.h  CMHostDMA.cpp  CMHostDMA.h  CMakeLists.txt  GLTransform.cpp  GLTransform.h  KeyStrokeModule.cpp  KeyStrokeModule.h  README.md  Raw_.raw  TensorRT.cpp  TestModule.cpp  TestModule.h  launchDivision.cu  launchDivision.h  rgb_1024x1024.raw  test_mono.raw  test_rgb.raw  trt_sample.cpp
base/: CMakeLists.txt
base/include/: Allocators.h  CCCuDMA.h  CCDMA.h  CCDMACu.h  CCKernel.h  CommonDefs.h  CuCtxSynchronize.h  DMAAllocator.h  DMABuffer.h  DMAFDWrapper.h  DMAUtilWrapper.h  DMAUtils.h  EglRenderer.h  Frame.h  FrameFactory.h  ImageMetadata.h  Module.h  NvV4L2Camera.h  NvV4L2CameraHelper.h
base/src/: CCCuDMA.cpp  CCDMA.cpp  CCDMACu.cpp  CCKernel.cu  CCNPPI.cpp  ColorMapKernel.cu  CuCtxSynchronize.cpp  CudaMemCopy.cpp  DMAFDWrapper.cpp  DMAUtilWrapper.cpp  DMAUtils.cpp  EffectsNPPI.cpp  EglRenderer.cpp  FileReaderModule.cpp  FileWriterModule.cpp  Frame.cpp  FrameFactory.cpp  GaussianBlur.cpp  ImageViewerModule.cpp  JPEGDecoderL4TM.cpp  JPEGEncoderL4TM.cpp  JPEGEncoderNVJPEG.cpp  Logger.cpp  Module.cpp  NvV4L2Camera.cpp  NvV4L2CameraHelper.cpp  OverlayNPPI.cpp
base/test/: ccdma_tests.cpp  ccnppi_tests.cpp  cudamemcopy_tests.cpp  effectsnppi_tests.cpp  frame_factory_test_dma.cpp  jpegdecodernvjpeg_tests.cpp  module_tests.cpp  nvjpeg_combo_tests.cpp  nvv4l2camera_test.cpp  nvv4l2camerahelper_test.cpp  overlaynppi_tests.cpp  resizenppi_jpegencodernvjpeg_tests.cpp  unit_tests.cpp
test/: unit_test.cpp
